--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Lyltip | JQuery tooltip plugin</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Lyrians/lyltip/lyltip.css">
 	<link rel="stylesheet" href="estilos.css">
 </head>
